--- a/healthProjectSample/src/main/webapp/WEB-INF/views/include/header.jspf
+++ b/healthProjectSample/src/main/webapp/WEB-INF/views/include/header.jspf
@@ -5,7 +5,6 @@
    String userSessionName = (String)session.getAttribute("user_name");
    String userSessionId = (String)session.getAttribute("user_id");
 %>
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -77,7 +76,7 @@
                      document.getElementById('menu').style.visibility = 'visible';
                  }
              }
-    
+            
              </script>         
 <style>
 .music-menu {
@@ -137,7 +136,7 @@
                <%} %>
                </a></li>
                <li class="nav-item"><a class="nav-link js-scroll-trigger"
-                  href="ex" >운동법</a></li>
+                  href="ex">운동법</a></li>
                <li class="nav-item dropdown"><a
                   class="nav-link js-scroll-trigger dropdown-toggle"
                   data-toggle="dropdown">Reservation</a>
@@ -180,16 +179,17 @@
             	<button type="button" class="orange_btn"
                   style="width: 160px; height: 33px; margin-right:20px; position: fixed; right: 120px; top:20px" onclick="return location.href='trainerRegister'"> 트레이너 등록 </button>
             </c:if>
+         </div>
+      </div>
+
+
+
             <img class="navbar-toggler navbar-toggler-right"
                style="float: right; width: 125px; height: 61px;" class="img-fluid"
                   data-toggle="collapse" data-target="#navbarResponsive"
                      id="menu" value="menu" onClick="action();" src="resources/static/img/close-btn.png?ver=1.1"/>
          </div>
       </div>
-
-
-
-      
    </nav>
    <br>
    <br>
